--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,13 @@ Imports:
     learnr
 Depends: 
     R (>= 2.10)
-RoxygenNote: 7.2.0.9000
+RoxygenNote: 7.2.1
 Suggests: 
     dplyr,
     ggplot2,
+    gt,
+    gtsummary,
     janitor,
+    knitr,
+    mapview,
     sf
