--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 Imports: 
+    gradethis,
     learnr
 Depends: 
     R (>= 2.10)
@@ -28,3 +29,5 @@ Suggests:
     knitr,
     mapview,
     sf
+Remotes:
+    rstudio/gradethis
